@@ -1077,4 +1077,5 @@
 		Added gtkwave_argv0_cached as Open New Window does not work if
 		"gtkwave" is not in path or is something like gtkwave-bin as
 		in an OSX bundle.
+		Detect context swapping in file chooser from DnD.
 
